--- a/sass/edd/_edd-cart.scss
+++ b/sass/edd/_edd-cart.scss
@@ -32,6 +32,10 @@ Easy Digital Downloads Cart
 	}
 }
 
+.owp-qv-open {
+	overflow: hidden;
+}
+
 .boxed-layout .current-shop-items-dropdown {
 	right: 0;
 }
